--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "create-extra",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This is an initializer for extra-* packages.",
   "main": "index.js",
+  "bin": {
+    "create-extra": "index.js"
+  },
   "scripts": {
     "test": "exit"
   },
